fix overlap issue with project cards with long title names

--- a/src/views/BrowseAll/ProjectCard/ProjectCard.scss
+++ b/src/views/BrowseAll/ProjectCard/ProjectCard.scss
@@ -1,6 +1,3 @@
-
-
-
 .project-card-container {
 	background-color: $snow-white;
 	margin: 10px;
@@ -13,7 +10,7 @@
 		position: relative;
 		display: flex;
 		justify-content: flex-end;
-		
+
 		svg {
 			position: absolute;
 			padding: 10px;
@@ -21,7 +18,7 @@
 			color: $snow-white;
 			z-index: 1;
 		}
-		
+
 		img {
 			width: 100%;
 			height: 150px;
@@ -36,14 +33,13 @@
 			bottom: 0;
 			left: 0;
 			border-radius: 5px 5px 0 0;
-			background: linear-gradient(196deg, rgba($bleached-black, 1.0),  rgba(#414141, 0.15));
+			background: linear-gradient(196deg, rgba($bleached-black, 1), rgba(#414141, 0.15));
 			opacity: 1;
 			&:hover {
 				opacity: 0.5;
 				transition-duration: 1s;
 			}
 		}
-
 	}
 	.project-card-body {
 		display: flex;
@@ -51,6 +47,7 @@
 		padding: 10px;
 		height: calc(100% - 150px);
 		justify-content: space-between;
+		max-width: 220px;
 
 		.project-card-body-descript {
 			h5 {
@@ -83,7 +80,6 @@
 		}
 	}
 }
-
 
 .dark-mode {
 	.project-card {
